--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -18,4 +18,6 @@ RUN pip3 install -r requirements.txt
 
 COPY whisper_api whisper_api
 
-CMD python3 -m uvicorn whisper_api.main:app --host 0.0.0.0 --port 3000
+ENV PORT=3001
+
+CMD python3 -m uvicorn whisper_api.main:app --host 0.0.0.0 --port $PORT
