--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-fastapi~=0.92.0
+fastapi>=0.92.0
 openai-whisper>=20230124
-python-multipart~=0.0.5
-uvicorn~=0.20.0
+python-multipart>=0.0.5
+uvicorn>=0.20.0
