--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,8 +1,8 @@
 repos:
-  - repo: https://github.com/psf/black
-    rev: 23.1.0
+  - repo: https://github.com/pre-commit/mirrors-autopep8
+    rev: v2.0.2
     hooks:
-      - id: black
+    -   id: autopep8
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
