use ms-python.autopep8

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
-    "python.formatting.provider": "autopep8",
+    "[python]": {
+        "editor.defaultFormatter": "ms-python.autopep8",
+    },
     "python.testing.pytestArgs": [
         "tests"
     ],
