--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,7 +19,7 @@ repos:
     hooks:
       - id: reorder-python-imports
 
-  - repo: https://github.com/asottile/pyupgrade
-    rev: v3.10.1
-    hooks:
-      - id: pyupgrade
+#  - repo: https://github.com/asottile/pyupgrade
+#    rev: v3.10.1
+#    hooks:
+#      - id: pyupgrade
