improve on DevShell

--- a/.envrc
+++ b/.envrc
@@ -1,2 +1,5 @@
-# use direnv allow
-use flake #default
+# use direnv allow to use .envrc file
+export using_direnv=true
+
+# if you need CUDA support, replace withoutCUDA with withCUDA
+use flake #withoutCUDA
