add check for nvidia

--- a/.envrc
+++ b/.envrc
@@ -1,5 +1,9 @@
 # use direnv allow to use .envrc file
 export using_direnv=true
 
-# if you need CUDA support, replace withoutCUDA with withCUDA
-use flake #withoutCUDA
+# Check if the NVIDIA kernel module is loaded
+if [ "$(lsmod | grep nvidia | wc -l)" -ne 0 ]; then
+  use flake #withCUDA
+else
+  use flake #withoutCUDA
+fi
