--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   whisperAPI:
-    image: ghcr.io/mayniklas/whisper_api:main
+    image: ghcr.io/mayniklas/whisper_api:latest
     build: .
     ports:
       - "3001:3001"
