Docker: add model prefetching

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,10 @@
 services:
   whisperAPI:
     image: ghcr.io/mayniklas/whisper_api:latest
-    build: .
+    build:
+      args:
+        # - CUDA_VERSION=12.4.1 # make sure CUDA_VERSION is compatible with the installed NVIDIA driver
+        - PREFETCH_MODEL=large  # set it to 0 to disable model prefetching
     ports:
       - "3001:3001"
     environment:
