--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,5 @@
     "[python]": {
         "editor.defaultFormatter": "ms-python.autopep8",
     },
-    "python.testing.pytestArgs": [
-        "tests"
-    ],
-    "python.testing.unittestEnabled": false,
-    "python.testing.pytestEnabled": true
+    "python.testing.unittestEnabled": true
 }
