--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "whisper_api"
-dynamic = ["version"]
+dynamic = ["dependencies", "version"]
 description = "A simple API for whisper"
 readme = "README.md"
 requires-python = ">=3.10"
