--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,8 @@ readme = "README.md"
 requires-python = ">=3.10"
 license = { text = "" }
 authors = [
-    {name = "MayNiklas", email = "info@niklas-steffen.de"},
-    {name = "nonchris", email = "git@chris-ge.de"}
+    { name = "MayNiklas", email = "info@niklas-steffen.de" },
+    { name = "nonchris", email = "git@chris-ge.de" },
 ]
 
 [tool.setuptools.dynamic]
@@ -28,7 +28,7 @@ whisper_api = "whisper_api:start"
 dev = ["black", "httpx", "pre-commit"]
 
 [tool.setuptools]
-package-dir = {"" = "src"}
+package-dir = { "" = "src" }
 include-package-data = true
 
 [tool.setuptools.packages.find]
